# openhub

./: .gitignore  README.md  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  metadata.json  package-lock.json  package.json  test_chunk.js
.github/: copilot-instructions.md
deploy/: openhub-gateway.service  openhub-hub.service  pararouter-gateway.service  pararouter-hub.service  remote_setup_and_build.sh
docs/: allinone.md  billing.md  gateway-unigateway-refactor-summary.md  general-ui-principles.md  hub-gateway-integration.md  modal-spec.md  price.md  skills.md  tech-stack.md  ui-guidelines.md  ui-table-standards.md  unigateway-rfc.md  xtrace.md
e2e/: e2e.test.ts  user_flow.test.ts
gateway/: Cargo.toml  gateway.db
gateway/src/: lib.rs  main.rs  runtime.rs  service.rs  settings.rs  trace.rs
gateway/src/adapter/: driver.rs  generic.rs  mod.rs  stream.rs  types.rs
gateway/src/adapter/drivers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
gateway/src/api/: anthropic.rs  mod.rs  models.rs  openai.rs
gateway/src/auth/: keys.rs
gateway/src/cli/: args.rs  commands.rs  mod.rs
gateway/src/config/: hub_syncer.rs  loader.rs  mod.rs  models.rs  syncer.rs
gateway/src/db/: init.rs  mod.rs  models.rs  operations.rs  pool.rs  schema.rs
gateway/src/endpoints/: admin.rs  basic.rs  chat.rs  control.rs  mod.rs  models.rs  types.rs
gateway/src/endpoints/emulators/: anthropic.rs  ollama.rs  openai.rs
gateway/src/engine/: mod.rs
gateway/src/pool/: health.rs  load_balancer.rs  manager.rs  mod.rs  rate_limiter.rs
gateway/src/provider/: mod.rs
gateway/src/router/: admin.rs  basic.rs  llm.rs  mod.rs
gateway/src/routing/: resolve.rs
gateway/src/sync/: bootstrap.rs  mod.rs  pools.rs
gateway/src/translators/: mod.rs  openai.rs  roundtrip_tests.rs
gateway/src/translators/anthropic/: chat.rs  mod.rs  tests.rs
gateway/src/translators/openai/: chat.rs  embeddings.rs  mod.rs  tests.rs
gateway/src/usage/: hooks.rs  mod.rs
hub/: check_db.mjs  db.ts  index.html  package.json  provider_health.ts  server.ts  test_kaopu.cjs  test_kaopu.js  test_stream.js  utils.ts  vite.config.ts
scripts/: test_anthropic_prompt.sh  test_openai_api.sh  test_openai_protocol.sh  (+2 more)
(+85 files in other folders)
