[package]
name = "gateway"
version = "1.1.0"
default-run = "gateway"
edition = "2021"
authors = ["lipicoder@qq.com"]
description = "A high-performance LLM gateway with a CLI-only control plane and OpenAI-compatible data plane. Features unified provider routing, priority-based load balancing, and production-ready rate limiting."
license = "MIT"
repository = "https://github.com/ParaTensor/pararouter"
homepage = "https://github.com/ParaTensor/pararouter"
documentation = "https://github.com/ParaTensor/pararouter/blob/master/README.md"
readme = "README.md"
keywords = ["llm", "proxy", "local", "openrouter", "openai", "anthropic"]
categories = ["command-line-utilities", "web-programming", "api-bindings"]
exclude = [
    "tests/*",
    "keys.yaml",
    ".gitignore",
    ".git/*",
]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# LLM connector
unigateway-core = "1.0.0"
unigateway-runtime = "1.0.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Regex for environment variable expansion
regex = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Utilities
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio-stream = "0.1"
futures-util = "0.3"
once_cell = "1.19"
rand = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "migrate", "chrono", "uuid"] }

# Additional utilities for multi-mode
url = "2.4"
resend-rs = "0.21.1"
bcrypt = "0.16"
sha2 = "0.10"
async-stream = "0.3.6"

[dev-dependencies]
tempfile = "3.0"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }

[[bin]]
name = "test_policy"
path = "src/test_policy.rs"

